<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    tools:layout_editor_absoluteY="25dp">

    <Button
        android:id="@+id/button5"
        android:layout_width="368dp"
        android:layout_height="47dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="70dp"
        android:background="@drawable/showbotbuttondesign"
        android:backgroundTintMode="multiply"
        android:elevation="24dp"
        android:onClick="quotes"
        android:text="@string/quotes"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button2" />

    <Button
        android:id="@+id/button3"
        android:layout_width="368dp"
        android:layout_height="46dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="70dp"
        android:layout_marginBottom="169dp"
        android:background="@drawable/showbotbuttondesign"
        android:backgroundTintMode="multiply"
        android:elevation="24dp"
        android:onClick="help"
        android:text="@string/help"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button2"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/button2"
        android:layout_width="368dp"
        android:layout_height="46dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="70dp"
        android:background="@drawable/showbotbuttondesign"
        android:backgroundTintMode="multiply"
        android:elevation="24dp"
        android:onClick="portfolio"
        android:text="@string/portfolio"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button" />

    <ImageView
        android:id="@+id/title"
        android:layout_width="576dp"
        android:layout_height="134dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginBottom="9dp"
        android:contentDescription="@string/todo"
        app:layout_constraintBottom_toTopOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/showbot2" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:layout_marginTop="9dp"
        android:layout_marginEnd="59dp"
        android:layout_marginBottom="76dp"
        android:text="@string/real_time_stock_market_analyzer"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="@color/colorAccent"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <Button
        android:id="@+id/button"
        android:layout_width="368dp"
        android:layout_height="51dp"
        android:layout_marginStart="132dp"
        android:layout_marginEnd="153dp"
        android:layout_marginBottom="15dp"
        android:background="@drawable/showbotbuttondesign"
        android:backgroundTintMode="multiply"
        android:elevation="24dp"
        android:onClick="stocks"
        android:text="@string/stock_market_view"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/button2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.46"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="spread_inside" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="162dp"
        android:layout_marginTop="59dp"
        android:layout_marginEnd="156dp"
        android:layout_marginBottom="26dp"
        android:text="@string/showbot"
        android:textAlignment="center"
        android:textStyle="italic"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button5" />

</android.support.constraint.ConstraintLayout>